@@ -24,6 +24,7 @@ XX/XX/2010 - Mythbox SVN XXXX
  - fixed   : Attempting to watch live tv on tuner which is already recording on a slave backend no longer fails silently
  - update  : IMDbPy updated to 4.5.1  
  - update  : Faster fanart lookup on all screens + wait indicators
+ - new     : Selecting a recording in the Upcoming Recordings screen launches the Recording Schedule editor
  
 01/17/2010 - MythBox SVN 1797
 =============================
